--- a/HW-6/style.css
+++ b/HW-6/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: arial;
+	background-color: gold;
 }
 
 /* I need to refamiliarize myself with css. I basically had to copy and paste from the example. */
