--- a/HW-8/style/style.css
+++ b/HW-8/style/style.css
@@ -7,6 +7,17 @@
     top: 400;
   }
 
+  #triangle {
+    width: 0;
+    height: 0;
+    border-left: 100px solid transparent; 
+    border-right: 100px solid transparent;  
+    border-bottom: 100px solid green; 
+    position: absolute;
+    left: 600;
+    top: 600;
+  }
+
   .stuff{
     background: blue;
     color:white;
