--- a/HW-11/css/main.css
+++ b/HW-11/css/main.css
@@ -2,5 +2,5 @@
     border: black;
     border-style: solid;
     border-width: 2px;
-    background-color: beige;
+    background-color: rgb(125, 201, 255);
   }
